--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -1,5 +1,5 @@
 <header data-module="Header">
-  <a class="logo" href="\">
+  <a class="logo" href="index.html">
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
