--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" />
   <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
   <link rel="stylesheet" href="/bower_components/jplist/dist/css/jplist.core.min.css" />
+  <link rel="stylesheet" href="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -63,18 +64,20 @@
 
     <!-- build:js {{assetPath}}/js/vendor.js -->
     <!-- bower:js -->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
     <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
     <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
     <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
     <script src="/bower_components/slick-carousel/slick/slick.js"></script>
     <script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
     <script src="/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.js"></script>
     <script src="/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.core.min.js"></script>
+    <script src="/bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
+    <script src="/bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <!-- endbower -->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- endbuild -->
@@ -84,6 +87,7 @@
     <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script> 
+    
     {# 
     <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
