--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -395,6 +395,14 @@ section {
 		}
 	}  
 }
+.f-right {
+ float: right;
+}
+.f-left {
+ float: left;
+}
+
+
 .tt-cursor {
 	background: $gray-light;
 }
