--- a/app/index.twig
+++ b/app/index.twig
@@ -14,7 +14,7 @@
 			<li><a href="#">district 10</a></li>
 		</ul>
 
-		<form id="banner-search" data-module="searchGroup">
+		<form id="banner-search">
 			<div class="row">
 				<div class="col-md-8">
 					<div class="form-group search-map inputtags">
