--- a/app/listing.twig
+++ b/app/listing.twig
@@ -43,7 +43,7 @@
   <div class="modal fade" id="inspectionForm">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-body row">
+        <div class="modal-body">
           <div class="block-title">
             <div class="house-code">
               h012345
@@ -53,7 +53,7 @@
             <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
           </div>
           <div class="row">
-            <div class="col-5">
+            <div class="col-md-6">
               <p><b>$1200</b> per month</p>
               <ul class="thumb-service thumb--col-2 thumb-overview">
                 <li><i class="fa fa-building-o"></i> Apartment</li>  
@@ -63,7 +63,7 @@
                 <li><i class="fa fa-umbrella"></i> 1 Fullu Funished(s)</li>  
               </ul>
             </div>
-            <div class="col-7">
+            <div class="col-md-6">
               <form>
                 <div class="input-wrapper">
                   <input type="text" placeholder="Name [required]" id="name" name="name" required="required">
