--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -3,10 +3,10 @@
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
-  <form id="searchHeader" class="wrapper-inputtags collapse">
+  <form id="searchHeader" class="wrapper-inputtags">
     <div class="form-wrapper">
       <input type="text" value="" id="search-header" data-role="tagsinput" />
-      <a class="close-form" href="#searchHeader" data-toggle="collapse"><i class="fa fa-close"></i></a>
+      <a class="close-form" href="javascript:void(0)" ><i class="fa fa-close"></i></a>
       <a href="#0" class="btn-submit"><i class="fa fa-search"></i></a>
     </div>
   </form>
@@ -15,9 +15,6 @@
       <span>Menu</span>
     </a>
     <ul class="nav__menu clearfix">
-      <li class="active">
-        <a href="#searchHeader" data-toggle="collapse" class="open-search collapsed"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
-      </li>
       <li>
         <a href="listing.html"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
       </li>
