--- a/app/index.twig
+++ b/app/index.twig
@@ -5,8 +5,8 @@
 
 	<div class="banner-wrapper text-center">
 		<h1>hello Saigon</h1>
-		<label>Popuplar Areas:</label>
 		<ul class="link-district">
+			<li>Popuplar Areas: </li>
 			<li><a href="#">district 1</a> </li>
 			<li><a href="#">district 2</a> </li>
 			<li><a href="#">district 3</a> </li>
@@ -24,66 +24,136 @@
 					</div>
 				</div>
 				<div class="col-md-4 ">
-					<div class="select-wrapper">
-						<select name="type" id="type">
-							<option  disabled="disabled" selected="selected" value="">All Property Type</option>
-							<option value="Male">2000</option>
-							<option value="Female">2001</option>
-						</select>
-					</div>
+					<div class="checkbox-list">
+            <span>All Property Types</span>
+            <ul>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="tnc" name="tnc" checked="checked">
+                <label for="tnc">Apartment</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="tnc1" name="tnc1" checked="checked">
+                <label for="tnc1">Service Apartment</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="tnc3" name="tnc3" checked="checked">
+                <label for="tnc3">Town house</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="tnc4" name="tnc4" checked="checked">
+                <label for="tnc4">Other</label>
+              </li>
+            </ul>
+          </div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-2">
 					<div class="select-wrapper select-bed">
-						<select name="bath" id="bath">
-							<option disabled="disabled" selected="selected" value="">Any bed</option>
-							<option value="Male">1</option>
-							<option value="Female">2</option>
-						</select>
+						<span>Any Bed</span>
+						<ul>
+							<li class="active">Any Bed</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+							<li>6+</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+							<li>6+</li>
+						</ul>
 					</div>
 				</div>
 
 				<div class="col-md-2">
 					<div class="select-wrapper select-bath">
-						<select name="bath" id="bath">
-							<option disabled="disabled" selected="selected" value="">Any bath</option>
-							<option value="Male">1</option>
-							<option value="Female">2</option>
-						</select>
+						<span>Any bath</span>
+						<ul>
+							<li class="active">Any bath</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+							<li>6+</li>
+							<li>1+</li>
+							<li>2+</li>
+							<li>3+</li>
+							<li>4+</li>
+							<li>5+</li>
+							<li>6+</li>
+						</ul>
 					</div>
 				</div>
 				<div class="col-md-2 ">
 					<div class="select-wrapper select-range">
-						<span class="range-text">Min</span>
-						<select name="min" id="min">
-							<option disabled="disabled" selected="selected" value="">0</option>
-							<option value="Male">$1000</option>
-							<option value="Female">$2000</option>
-						</select>
+						Min <span>0</span>
+						<ul>
+							<li class="active">0</li>
+							<li>$10000</li>
+							<li>$20000</li>
+							<li>$30000</li>
+							<li>$40000</li>
+							<li>$50000</li>
+							<li>$60000</li>
+							<li>$10000</li>
+							<li>$20000</li>
+							<li>$30000</li>
+							<li>$40000</li>
+							<li>$50000</li>
+							<li>$60000</li>
+						</ul>
 					</div>
 				</div>
 
 				<div class="col-md-2 ">
 					<div class="select-wrapper select-range">
-						<span class="range-text">Max</span>
-						<select name="max" id="max">
-							<option disabled="disabled" selected="selected" value="">0</option>
-							<option value="Male">$1000</option>
-							<option value="Female">$2000</option>
-						</select>
+						Max <span>0</span>
+						<ul>
+							<li class="active">0</li>
+							<li>$10000</li>
+							<li>$20000</li>
+							<li>$30000</li>
+							<li>$40000</li>
+							<li>$50000</li>
+							<li>$60000</li>
+							<li>$10000</li>
+							<li>$20000</li>
+							<li>$30000</li>
+							<li>$40000</li>
+							<li>$50000</li>
+							<li>$60000</li>
+						</ul>
 					</div>
 				</div>
 
 				<div class="col-md-4 ">
-					<div class="select-wrapper">
-						<select name="bath" id="bath">
-							<option disabled="disabled" selected="selected" value="">Anybath</option>
-							<option value="Male">1</option>
-							<option value="Female">2</option>
-						</select>
-					</div>
+					<div class="checkbox-list">
+            <span>Require amenities</span>
+            <ul>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="require" name="require" checked="checked">
+                <label for="require">Apartment</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="require1" name="require1" checked="checked">
+                <label for="require1">Service Apartment</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="require3" name="require3" checked="checked">
+                <label for="require3">Town house</label>
+              </li>
+              <li class="checkbox-wrapper">
+                <input type="checkbox" id="require4" name="require4" checked="checked">
+                <label for="require4">Other</label>
+              </li>
+            </ul>
+          </div>
 				</div>
 			</div>
 
@@ -91,23 +161,6 @@
 				<a href="search-page.html" class="btn btn--red">Search</a>
 			</div>	
 		</form>
-
-		<script>
-		// var countries = new Bloodhound({
-		// 	datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
-		// 	queryTokenizer: Bloodhound.tokenizers.whitespace,
-		// 	prefetch: {
-		// 		url: 'countries.json',
-		// 		filter: function(list) {
-		// 			return $.map(list, function(name) {
-		// 				return { name: name }; });
-		// 		}
-		// 	}
-		// });
-		// countries.initialize();
-
-		</script>
-
 		
 
 		<div class="site-sumary">
