--- a/app/index.twig
+++ b/app/index.twig
@@ -164,8 +164,8 @@
 		
 
 		<div class="site-sumary">
-			<p>Total Properties <br /><span>3125</span></p>
-			<p>Total User <br /><span>426</span></p>
+			<p>Total Properties <br /><span data-module="NumberAnimate">3125</span></p>
+			<p>Total User <br /><span data-module="NumberAnimate">426</span></p>
 		</div>
 	</div>
 </section>
