--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -1,7 +1,6 @@
 <header data-module="Header">
   <a class="logo" href="index.html">
-    <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
-    <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
+    <img src="./assets/images/global/logo.png" alt="" />
   </a>
   <form id="searchHeader" class="wrapper-inputtags">
     <div class="form-wrapper">
@@ -14,7 +13,7 @@
     <a href="javascript:void(0);" class="btn-burger">
       <span>Menu</span>
     </a>
-    <ul class="nav__menu clearfix">
+    <ul class="main-menu clearfix">
       <li>
         <a href="listing.html"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
       </li>
