--- a/app/assets/css/base/_variables.scss
+++ b/app/assets/css/base/_variables.scss
@@ -1,7 +1,7 @@
 $font_default: 'Open Sans', Helvetica, Arial, sans-serif;
 $imgPath: "../images";
 
-
+$colorBurger:#333;
 $blue: #2378A7;
 $red: #E25E66;
 $green: #3db309;
