--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -1,14 +1,14 @@
 header {
   background-size: cover;
-  min-height: 42px;
+  min-height: 50px;
   position: relative;
   z-index: 101;
   padding: 10px 30px;
   box-shadow: 0 0 20px #aaa;
-  @include screen(medium){ 
+  @include screen(medium){
     min-height: 73px;
     background: #fff;
-    width: 100%; 
+    width: 100%;
   }
 }
 
@@ -102,8 +102,8 @@ header {
   }
 }
 #searchHeader {
-  display: block;
-  
+  @extend .hide-for-small;
+
   .collapse.show {
     display: inline-block;
   }
@@ -114,7 +114,7 @@ header {
     background: none;
     border: none;
     outline: none;
-  } 
+  }
   .close-form {
     @include absolute(top 6px right 8px);
     background: none;
@@ -159,30 +159,61 @@ nav {
     position: relative;
     max-width: 50%;
     margin: 0 auto;
-    height: 100%; 
+    height: 100%;
     float: right;
   }
 
   .btn-burger {
-    @include absolute(top 10px left 10px);
+    @include absolute(top left );
     @extend .show-for-small;
   }
 }
 
-.nav__menu { 
-  @include fixed(top 42px left);
-  z-index: 2;
-  width: 100%;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: none;
+.main-menu {
+  background: #fff;
+  overflow:hidden;
+  width:0;
+  opacity: 0;
   @include screen(medium){
+    opacity: 1;
     display: block;
-    position: absolute;
+    width: auto;
+    float: right;
+    padding-top: 15px;
     text-align: right;
     background: none;
-    @include absolute(top 15px left);
+    // position: absolute;
+    // @include absolute(top 15px left);
+  }
+
+  &.active {
+    margin:0;
+    width: 100%;
+    opacity: 1;
+    width:100%;
+    @include absolute(top 50px left);
+
+    li {
+      width:100%;
+      @include screen(medium){
+        width:auto;
+      }
+
+      @for $i from 1 to 4 {
+        &:nth-child(#{$i}) {
+          a {
+            @include screen(medium, false){
+              transition-delay: ($i * 0.1s) + 0.1s;
+            }
+          }
+        }
+      }
+    }
+    a{
+      transform:translate(0,0);
+      opacity: 1;
+      padding: 0 10px;
+    }
   }
 
   li {
@@ -197,6 +228,7 @@ nav {
       transition:0.3s ease-out;
       opacity: 1;
       transform: scale(1);
+
     }
 
 
@@ -356,7 +388,7 @@ nav {
   width: 210px;
   background: rgba(0, 0, 0, 0.8);
   border: 1px solid #fff;
-  display: block; 
+  display: block;
   margin: 0;
   padding: 5px 0;
   @include absolute(top 60px right 5px);
@@ -365,7 +397,7 @@ nav {
   }
   &:after {
     content: '';
-    @include absolute(top -11px right 7%); 
+    @include absolute(top -11px right 7%);
     @include css-triangle(5px, #fff, bottom);
   }
   li {
@@ -382,3 +414,4 @@ nav {
     }
   }
 }
+
