--- a/app/project.twig
+++ b/app/project.twig
@@ -2,8 +2,7 @@
 
 {% block page %}
 
-<section class="banner">
-	<img src="assets/images/dummy/hoozing_star-hill.png" />
+<section class="banner banner-project">
 	<div class="banner__info">
 		<div class="container">
 			<div class="score">
@@ -38,7 +37,7 @@
 
 		<h2 class="section-title">Feature Listings in Standhills</h2>
 		<div class="row">
-			<div class="col-md-3 thumb-item">
+			<div class="col-6 col-md-3 thumb-item">
 				<div class="thumb-gallery">
 					<div class="thumb-slide" data-module="ThumbSlide">
 						<ul class="thumb-img slider-wrapper">
@@ -60,7 +59,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 thumb-item">
+			<div class="col-6 col-md-3 thumb-item">
 				<div class="thumb-gallery">
 					<div class="thumb-slide" data-module="ThumbSlide">
 						<ul class="thumb-img slider-wrapper">
@@ -82,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 thumb-item">
+			<div class="col-6 col-md-3 thumb-item">
 				<div class="thumb-gallery">
 					<div class="thumb-slide" data-module="ThumbSlide">
 						<ul class="thumb-img slider-wrapper">
@@ -104,7 +103,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 thumb-item">
+			<div class="col-6 col-md-3 thumb-item">
 				<div class="thumb-gallery">
 					<div class="thumb-slide" data-module="ThumbSlide">
 						<ul class="thumb-img slider-wrapper">
