--- a/app/assets/css/blocks/_header.scss
+++ b/app/assets/css/blocks/_header.scss
@@ -172,18 +172,16 @@ nav {
 .main-menu {
   background: #fff;
   overflow:hidden;
-  width:0;
+  height:0;
   opacity: 0;
   @include screen(medium){
     opacity: 1;
     display: block;
-    width: auto;
+    height: auto;
     float: right;
     padding-top: 15px;
     text-align: right;
     background: none;
-    // position: absolute;
-    // @include absolute(top 15px left);
   }
 
   &.active {
