--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -4,7 +4,7 @@
   border-top: 1px solid $gray-medium;
   border-bottom: 1px solid $gray-medium;
 
-  .select-wrapper {
+  .select-wrapper, .check-list {
     display: inline-block;
     margin-bottom: 0;
   }
